module 1 and 2 draft

--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
@@ -78,8 +78,14 @@
                 "azdata_cell_guid": "e91e1c9a-7175-45e0-879b-0f6ef150db3c",
                 "tags": []
             },
-            "outputs": [],
-            "execution_count": 3
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": ""
+                }
+            ],
+            "execution_count": 2
         },
         {
             "cell_type": "markdown",
@@ -100,7 +106,7 @@
                 "azdata_cell_guid": "828e608f-fadd-40a7-8ac2-1f5394a81412"
             },
             "outputs": [],
-            "execution_count": 4
+            "execution_count": 3
         },
         {
             "cell_type": "markdown",
@@ -121,12 +127,12 @@
                 "azdata_cell_guid": "85457b28-ac25-40a1-8dea-5cd1ca8a70f2"
             },
             "outputs": [],
-            "execution_count": 5
+            "execution_count": 4
         },
         {
             "cell_type": "markdown",
             "source": [
-                "You can also determine the usage."
+                "You can also determine the database suze and usage."
             ],
             "metadata": {
                 "azdata_cell_guid": "9439704f-73d5-4c60-a422-233e2062dcff"
@@ -144,10 +150,10 @@
                 {
                     "output_type": "stream",
                     "name": "stdout",
-                    "text": "[\n  {\n    \"currentValue\": 29360128.0,\n    \"displayName\": \"Database Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0406\",\n    \"unit\": \"Bytes\"\n  },\n  {\n    \"currentValue\": 33554432.0,\n    \"displayName\": \"Database Allocated Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_allocated_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0406\",\n    \"unit\": \"Bytes\"\n  }\n]\n"
+                    "text": "[\n  {\n    \"currentValue\": 556793856.0,\n    \"displayName\": \"Database Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0406\",\n    \"unit\": \"Bytes\"\n  },\n  {\n    \"currentValue\": 1610612736.0,\n    \"displayName\": \"Database Allocated Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_allocated_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0406\",\n    \"unit\": \"Bytes\"\n  }\n]\n"
                 }
             ],
-            "execution_count": 7
+            "execution_count": 5
         },
         {
             "cell_type": "markdown",
@@ -199,37 +205,65 @@
                 "azdata_cell_guid": "1af59f8b-afe3-43c5-863d-3549f06871ed"
             },
             "outputs": [],
-            "execution_count": 8
+            "execution_count": 6
         },
         {
             "cell_type": "markdown",
             "source": [
-                "So the results above tell us the connection type is \"Default\". What if we want to make everything `Redirect` so we can achieve reduced latency? It's as easy as running two commands.  \r\n",
-                "\r\n",
-                "First, we need to update the firewall rules to allow the required ports."
+                "So the results above tell us the connection type is \"Default\". Let's set it to \"Proxy\" and determine the round trip time."
             ],
             "metadata": {
-                "azdata_cell_guid": "7eb584ef-cc42-4dc8-920d-1b049f33fe0c"
+                "azdata_cell_guid": "57406599-f0e7-4862-ae96-feb2bf4b3d04"
             }
         },
         {
             "cell_type": "code",
             "source": [
-                "az sql server firewall-rule create -n NewRule --start-ip-address 11000 --end-ip-address 11999 # ?????????????????????????????????????????????????????????????"
+                "# update policy\r\n",
+                "az sql server conn-policy update --connection-type Proxy\r\n",
+                "# confirm update\r\n",
+                "az sql server conn-policy show"
             ],
             "metadata": {
-                "azdata_cell_guid": "af7d38e8-5cb8-4ef1-8718-b871403943ca"
+                "azdata_cell_guid": "5114ebd7-b37d-4cd8-abbc-4a00ba77f798"
             },
-            "outputs": [],
-            "execution_count": 0
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": "{\n  \"connectionType\": \"Proxy\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": null,\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n{\n  \"connectionType\": \"Proxy\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": \"West US\",\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n"
+                }
+            ],
+            "execution_count": 16
         },
         {
             "cell_type": "markdown",
             "source": [
-                "Then, we can update the connection policy"
+                "If you want to test round trip time, you can connect with SSMS, create a new query (below), and choose to \"Include Client Statistics\" in your results. In the results, the \"Wait time on server replies\" is the best indicator of network latency. You can run this a few times to get a good average.  \r\n",
+                "\r\n",
+                "```sql\r\n",
+                "-- Proxy\r\n",
+                "SELECT * FROM SalesLT.Product\r\n",
+                "GO 20\r\n",
+                "```\r\n",
+                "\r\n",
+                "After 10 trials, I had an average wait time on server replies of `46.6000`"
             ],
             "metadata": {
-                "azdata_cell_guid": "fe00029a-e099-47f3-932f-7e62c4e4e9ee"
+                "azdata_cell_guid": "77286271-b423-407a-9b8e-4c96d80b6d0e"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "What if we want to make everything `Redirect` so we can attempt to achieve reduced latency?\r\n",
+                "\r\n",
+                "First, for anything that is **outside Azure**, you need to allow inbound and outbound communication on ports in the range of 11000 - 11999. This is required for the Redirect connection policy. Since you are connecting through an Azure VM, there is no action here.  \r\n",
+                "\r\n",
+                "Update the connection policy and confirm that update with the following two commands.  "
+            ],
+            "metadata": {
+                "azdata_cell_guid": "7eb584ef-cc42-4dc8-920d-1b049f33fe0c"
             }
         },
         {
@@ -243,8 +277,68 @@
             "metadata": {
                 "azdata_cell_guid": "c540779a-9c4d-472f-8ddc-6fc59b8437d4"
             },
-            "outputs": [],
-            "execution_count": 0
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": "{\n  \"connectionType\": \"Redirect\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": null,\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n{\n  \"connectionType\": \"Redirect\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": \"West US\",\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n"
+                }
+            ],
+            "execution_count": 17
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Now, to test network latency from the `Redirect` policy, connect with SSMS, create a new query (below), and choose to \"Include Client Statistics\" in your results. Compare the \"Wait time on server replies\" with your query for `Proxy`.  \r\n",
+                "\r\n",
+                "> Note: you'll need to create a **new connection to query** to evaluate (i.e. right-click on the Adventure Works database and select New Query, do not use the query window you used to test Proxy).\r\n",
+                "\r\n",
+                "```sql\r\n",
+                "-- Redirect\r\n",
+                "SELECT * FROM SalesLT.Product\r\n",
+                "GO 20\r\n",
+                "```\r\n",
+                "\r\n",
+                "After 10 trials, I have an average wait time on server replies of `25.8000`, which is almost half that of the Proxy connection policy.   \r\n",
+                "\r\n",
+                "### To review\r\n",
+                "\r\n",
+                "Redirect is faster because after the intial connection, you can bypass the gateway and go straight to the database. This means less hops, which results in less latency, which ultimately helps in preventing bottlenecks (especially important for chatty applications).\r\n",
+                "\r\n",
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "1b519a96-f1ea-4454-a081-2a7ffc28c38a"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "To set it back to default (or change to Proxy), you can use the same set of commands."
+            ],
+            "metadata": {
+                "azdata_cell_guid": "45a85215-ed6c-447f-8c06-7f59220e9915"
+            }
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "# update policy\r\n",
+                "az sql server conn-policy update --connection-type Default\r\n",
+                "# confirm update\r\n",
+                "az sql server conn-policy show"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "34f23b31-0252-436f-abdb-f0b7208f44b7"
+            },
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": "{\n  \"connectionType\": \"Default\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": null,\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n{\n  \"connectionType\": \"Default\",\n  \"id\": \"/subscriptions/227e9423-1792-43b0-82e6-ac94397ed789/resourceGroups/azuresqlworkshop0406/providers/Microsoft.Sql/servers/aw-server0406/connectionPolicies/default\",\n  \"kind\": null,\n  \"location\": \"West US\",\n  \"name\": \"default\",\n  \"resourceGroup\": \"azuresqlworkshop0406\",\n  \"type\": \"Microsoft.Sql/servers/connectionPolicies\"\n}\n"
+                }
+            ],
+            "execution_count": 18
         }
     ]
 }
