--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/loaddata/LoadData.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/loaddata/LoadData.ipynb
@@ -119,7 +119,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.009"
+                        "text/html": "Total execution time: 00:00:00.011"
                     },
                     "metadata": {}
                 }
@@ -159,7 +159,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.013"
+                        "text/html": "Total execution time: 00:00:00.017"
                     },
                     "metadata": {}
                 }
@@ -189,10 +189,11 @@
             "source": [
                 "CREATE DATABASE SCOPED CREDENTIAL [https://azuresqlworkshopsa.blob.core.windows.net/data/]\r\n",
                 "WITH IDENTITY = 'SHARED ACCESS SIGNATURE',\r\n",
-                "SECRET = 'sp=redacted';"
+                "SECRET = 'redacted';"
             ],
             "metadata": {
-                "azdata_cell_guid": "26c0a508-595d-4ead-a680-b8ea422a8d68"
+                "azdata_cell_guid": "26c0a508-595d-4ead-a680-b8ea422a8d68",
+                "tags": []
             },
             "outputs": [
                 {
@@ -205,7 +206,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.024"
+                        "text/html": "Total execution time: 00:00:00.014"
                     },
                     "metadata": {}
                 }
@@ -248,7 +249,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.015"
+                        "text/html": "Total execution time: 00:00:01.471"
                     },
                     "metadata": {}
                 }
@@ -271,18 +272,16 @@
         {
             "cell_type": "code",
             "source": [
-                "SET NOCOUNT ON --WHY?\r\n",
+                "SET NOCOUNT ON -- Reduce network traffic by stopping the message that shows the number of rows affected\r\n",
                 " BULK INSERT DataLoad.store_returns -- Table you created in Step 1\r\n",
                 " FROM 'dataset/store_returns/store_returns_1.dat' -- Within the container, the location of the file\r\n",
                 "     WITH (\r\n",
                 "\t\t\tDATA_SOURCE = 'dataset' -- Using the External data source from Step 4\r\n",
-                "\t\t\t,DATAFILETYPE = 'char' -- WHY?\r\n",
-                "\t        ,FIELDTERMINATOR = '\\|' -- What determines a column separator\r\n",
-                "\t        ,ROWTERMINATOR = '\\|\\n' -- What determines the end of a row\r\n",
-                "            ,BATCHSIZE=100000 -- WHY BATCH SIZE IS IMPORTANT?\r\n",
-                "            , TABLOCK -- WHY TABLOCK IS IMPORTANT?\r\n",
-                "            -- NOTE ABOUT PARTITIONING?\r\n",
-                "            -- NOTE ABOUT RUNNING IN PARALLEL?\r\n",
+                "\t\t\t,DATAFILETYPE = 'char' \r\n",
+                "\t        ,FIELDTERMINATOR = '\\|' \r\n",
+                "\t        ,ROWTERMINATOR = '\\|\\n' \r\n",
+                "            ,BATCHSIZE=100000 -- Reduce network traffic by inserting in batches\r\n",
+                "            , TABLOCK -- Minimize number of log records for the insert operation\r\n",
                 "           )"
             ],
             "metadata": {
@@ -299,7 +298,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:01:08.097"
+                        "text/html": "Total execution time: 00:01:07.828"
                     },
                     "metadata": {}
                 }
@@ -309,7 +308,9 @@
         {
             "cell_type": "markdown",
             "source": [
-                "How many rows were inserted into our table?"
+                "In the **Module 4: Performance**, there will be an opportunity to explore how you can improve your throughput and performance of bulk loading activities.   \r\n",
+                "\r\n",
+                "For now, let's check how many rows were inserted into our table:"
             ],
             "metadata": {
                 "azdata_cell_guid": "96f0dcbb-7bf6-456e-b5d8-53763eae3630"
@@ -335,7 +336,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.733"
+                        "text/html": "Total execution time: 00:00:01.460"
                     },
                     "metadata": {}
                 },
@@ -395,7 +396,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.020"
+                        "text/html": "Total execution time: 00:00:00.042"
                     },
                     "metadata": {}
                 }
