--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/verifydeployment/VerifyDeployment-SS.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/verifydeployment/VerifyDeployment-SS.ipynb
@@ -32,7 +32,7 @@
                 "2. For \"Attach to\", use the drop-down to select **Change Connection**. From the Recent Connections pane, you should be able to select your local SQL Server instance.  \r\n",
                 "\r\n",
                 "Now that you're set up, you should read the text cells and \"Run\" the code cells by selecting the play button that appears in the left of a code cell when you hover over it.  \r\n",
-                "> All of the cells have been run in advance, so you can just review the results for SQL Server 2019.         \r\n",
+                "> All of the cells have been run in advance, so you can either just review the results or run the commands for SQL Server 2019.         \r\n",
                 ""
             ],
             "metadata": {
@@ -2542,15 +2542,6 @@
         {
             "cell_type": "markdown",
             "source": [
-                "TODO: Commentary on results for above queries"
-            ],
-            "metadata": {
-                "azdata_cell_guid": "9282b039-ff63-4494-9fac-3dd2a329d2ae"
-            }
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
                 "Let's next verify that all schedulers are online and we're detecting the expected CPUs. "
             ],
             "metadata": {
@@ -3279,12 +3270,12 @@
         {
             "cell_type": "markdown",
             "source": [
-                "There are, however, some Azure SQL queries you can use to get more information about your Azure SQL Database or Managed Instance deployment, two examples follow:\r\n",
+                "There are some Azure SQL queries you can use to get more information about your Azure SQL Database or Managed Instance deployment, two examples follow:\r\n",
                 "\r\n",
                 "* `sys.dm_user_db_resource_governance` returns actual configuration and capacity settings used by resource governance mechanisms in the current database or elastic pool\r\n",
                 "* `sys.dm_db_resource_stats` returns CPU, I/O, and memory consumption for an Azure SQL database or databases in Managed Instance  \r\n",
                 "\r\n",
-                "Run and review the queries below. Note that these do not apply to SQL Server"
+                "Run and review the queries below. Note that these do not apply to SQL Server."
             ],
             "metadata": {
                 "azdata_cell_guid": "06a05a1f-9864-4ef9-bb84-4cf1b8a83156"
@@ -3328,7 +3319,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "Finally, you made use `sys.dm_exec_requests` as a sanity check on currently running SQL workers"
+                "Finally, you can use `sys.dm_exec_requests` as a sanity check on currently running SQL workers"
             ],
             "metadata": {
                 "azdata_cell_guid": "9d8d5ee7-b577-4588-a42b-7e3fd008375b"
@@ -5763,24 +5754,6 @@
                 }
             ],
             "execution_count": 8
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "TODO: Add commentary on above"
-            ],
-            "metadata": {
-                "azdata_cell_guid": "abbfc233-5ec9-40c1-8732-ea669f715f07"
-            }
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                ""
-            ],
-            "metadata": {
-                "azdata_cell_guid": "b78d02fa-0f5e-4938-80f9-d87b4e98d83c"
-            }
         },
         {
             "cell_type": "markdown",
