monday check in

--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
@@ -17,7 +17,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Activity 2: Undo errors to a point in time\r\n",
+                "# Activity 1: Undo errors to a point in time\r\n",
                 "\r\n",
                 "#### <i>The Azure SQL Workshop - Module 5</i>\r\n",
                 "\r\n",
@@ -64,11 +64,6 @@
                 "DROP TABLE SalesLT.SalesOrderDetail\r\n",
                 "```\r\n",
                 "\r\n",
-                "Also, copy the `Completion time`. For example, in the below image, you would copy `2020-01-31T17:15:18`  \r\n",
-                "\r\n",
-                "![](./graphics/completiontime.png)  \r\n",
-                "\r\n",
-                "Then, paste the completion time **AND THEN SUBTRACT 2 MINUTES** in the PowerShell cell below and run it, so you can refer to it later.  \r\n",
                 "\r\n",
                 ""
             ],
@@ -79,7 +74,6 @@
         {
             "cell_type": "markdown",
             "source": [
-                "**Step 1 - Determine the time you need to go back to**   \r\n",
                 "Before you go any further, it's important to understand the recommended process for doing point in time restore (PITR):  \r\n",
                 "\r\n",
                 "1. Determine the time that you need to go back to. This should be **before** the error or mistake took place.  \r\n",
@@ -89,27 +83,37 @@
                 "1. Rename the new database to the original database name, e.g. **AdventureWorks0406-copy** to **AdventureWorks0406**.  \r\n",
                 "1. Delete the original database, e.g. **AdventureWorks0406-old**.  \r\n",
                 "\r\n",
-                "In order to complete step 1, you need to know when the last \"good\" transaction occurred, before the \"bad\" on, so you can restore to before the \"bad\" transaction but after the last \"good\" one.  \r\n",
+                "**Step 1 - Determine the time you need to go back to using Audit logs**   \r\n",
                 "\r\n",
-                "To do this, run the following query in **SSMS**, then note the completion time of the last good query run. In your case, it should be the `SELECT TOP 10 * FROM SalesLT.SalesOrderDetail`.  \r\n",
+                "The first step is to figure out when you should restore the database. In order to complete step 1, you need to know when the last \"good\" transaction occurred, before the \"bad\" on, so you can restore to before the \"bad\" transaction but after the last \"good\" one.  \r\n",
                 "\r\n",
-                "```sql\r\n",
-                "SELECT dest.text, deqs.last_execution_time\r\n",
-                "FROM sys.dm_exec_query_stats AS deqs\r\n",
-                "  CROSS APPLY sys.dm_exec_sql_text(deqs.sql_handle) AS dest\r\n",
-                "ORDER BY \r\n",
-                "    deqs.last_execution_time DESC\r\n",
+                "You may know ways to determine this time, but a new way may be to use the Audit logs in the Azure portal. Navigate to your Azure SQL Database in the Azure portal, e.g. **AdventureWorks0406**. In the left-hand menu, under Security, select **Auditing** and then select **View audit logs**.  \r\n",
+                "\r\n",
+                "![](./graphics/viewauditlogs.png)  \r\n",
+                "\r\n",
+                "Select **Log Analytics**.  \r\n",
+                "\r\n",
+                "![](./graphics/loganalytics.png)  \r\n",
+                "\r\n",
+                "Next, copy the below KQL query and paste it into the query editor in the Log Analytics view in the Azure portal (replace the existing query). **Update AdventureWorks0406 to match your database name**.\r\n",
+                "\r\n",
+                "```kql\r\n",
+                "search database_name_s == \"AdventureWorks0406\"\r\n",
+                "| where Category == 'SQLSecurityAuditEvents' and statement_s like 'DROP'\r\n",
+                "| project format_datetime(event_time_t, 'yyyy-MM-dd hh:mm:ss.fff'), ResourceGroup, server_instance_name_s, database_name_s,  statement_s, succeeded_s,client_ip_s, server_principal_name_s, application_name_s\r\n",
+                "| sort by event_time_t desc\r\n",
                 "```\r\n",
                 "\r\n",
-                "It should be similar to below, but with a different date/time.  \r\n",
+                "Once you've updated the above query in the Log Analytics query editor, select **Run** and review the results. It should be similar to below, but with a different date/time.   \r\n",
                 "\r\n",
-                "![](./graphics/lastgoodq.png)  \r\n",
+                "![](./graphics/laresults.png)  \r\n",
                 "\r\n",
-                "You'll notice, in this example, the date/time is `2020-01-31 21:11:42.993`. The required format is slightly different. Update it using this example as a reference and to the definition of `$before_error_time`.  \r\n",
-                "* SSMS format: `2020-01-31 21:11:42.993`\r\n",
-                "* Required format: `2020-01-31T21:11:42.993`  \r\n",
                 "\r\n",
-                "The last part of this step is filling in your Subscription ID and database name information so the rest goes smoothly.  \r\n",
+                "You'll notice, in this example, the date/time is `2020-02-10 09:28:54.509`. The required format is slightly different. Update it using this example as a reference and to the definition of `$before_error_time`.  \r\n",
+                "* Log Analytics format: `2020-02-10 09:28:54.509`\r\n",
+                "* Required format: `2020-02-10T09:28:54.509`  \r\n",
+                "\r\n",
+                "The last part of this step is filling in your **Subscription ID** and **Workshop ID** information so the rest goes smoothly.  \r\n",
                 "\r\n",
                 ""
             ],
@@ -120,9 +124,9 @@
         {
             "cell_type": "code",
             "source": [
-                "$before_error_time = \"2020-01-31T21:11:42.993\"\r\n",
+                "$before_error_time =\"<DropTime>\"\r\n",
                 "\r\n",
-                "$subscription_id = \"<SubscriptionIdHere>\"\r\n",
+                "$subscription_id = \"<SubscriptionId>\"\r\n",
                 "$unique_id = \"<WorkshopUserID>\"\r\n",
                 "$database_name = \"AdventureWorks$($unique_id)\"\r\n",
                 "$database_name_copy = \"$($database_name)-copy\"\r\n",
@@ -134,8 +138,14 @@
                 "azdata_cell_guid": "e66b65ce-c896-4457-97c4-9554c94d2aef",
                 "tags": []
             },
-            "outputs": [],
-            "execution_count": 19
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 1
         },
         {
             "cell_type": "markdown",
@@ -171,7 +181,16 @@
                 "tags": []
             },
             "outputs": [],
-            "execution_count": 14
+            "execution_count": 2
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Before you run the next cell, confirm the previous cell has completed, returning your subscription information."
+            ],
+            "metadata": {
+                "azdata_cell_guid": "16096315-c0e5-4dad-be7d-d7f11f01187c"
+            }
         },
         {
             "cell_type": "code",
@@ -187,7 +206,7 @@
                 "tags": []
             },
             "outputs": [],
-            "execution_count": 21
+            "execution_count": 3
         },
         {
             "cell_type": "code",
@@ -199,23 +218,14 @@
                 "azdata_cell_guid": "e91e1c9a-7175-45e0-879b-0f6ef150db3c",
                 "tags": []
             },
-            "outputs": [],
-            "execution_count": 3
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "This next command will take about 10 minutes. This is because, in the background, Azure is deploying a new Azure SQL Database in your Azure SQL Database logical server that has all the same configuration options as the original. After it's deployed, it will then restore the database into that new Azure SQL Database.  \r\n",
-                "\r\n",
-                "After about 6-8 minutes, you may be able to refresh your view of databases in **SSMS** and see that the database has been deployed and the restore is now in progress.  \r\n",
-                "\r\n",
-                "![](./graphics/dbrestoring.png)  \r\n",
-                "\r\n",
-                "Once you see this, it should only be 1-2 minutes more. You will know it is done, because the \"stop\" like button in the code cell below will stop spinning and go back to the standard \"play\" like button.  "
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "",
+                    "output_type": "stream"
+                }
             ],
-            "metadata": {
-                "azdata_cell_guid": "fec1c2b9-9af9-4b41-81c8-365031d6021f"
-            }
+            "execution_count": 4
         },
         {
             "cell_type": "code",
@@ -227,15 +237,23 @@
                 "azdata_cell_guid": "828e608f-fadd-40a7-8ac2-1f5394a81412"
             },
             "outputs": [],
-            "execution_count": 23
+            "execution_count": 5
         },
         {
             "cell_type": "markdown",
             "source": [
-                "TODO WHILE YOU WAIT"
+                "This above command will take about 3-5 minutes. This is because, in the background, Azure is deploying a new Azure SQL Database in your Azure SQL Database logical server that has all the same configuration options as the original. After it's deployed, it will then restore the database into that new Azure SQL Database.  \r\n",
+                "\r\n",
+                "You can check the status by refreshing your view of databases in **SSMS** by right-clicking on **Databases** and selecting **Refresh**. Once the database has been deployed, you will see the restore is now in progress.  \r\n",
+                "\r\n",
+                "![](./graphics/dbrestoring.png)  \r\n",
+                "\r\n",
+                "Once you see this, it should only be 1-2 minutes more. You will know it is done, because the \"stop\" button in the code cell below will stop spinning and go back to the standard \"play\" button. Also, you will no longer see \"(Restoring...)\" next to the copy database when you initiate a refresh.  \r\n",
+                "\r\n",
+                "If you notice it is taking longer than above stated times, it could be due to your environment. There are a limited number of restore requests that can be processed/submitted at once for a single subscription. If you want to learn more about the limits and related details for PITR while you wait, you can [read more to learn the details related to recovering an Azure SQL database by using automated database backups](https://docs.microsoft.com/en-us/azure/sql-database/sql-database-recovery-using-backups). "
             ],
             "metadata": {
-                "azdata_cell_guid": "5770ca8c-856f-4fb0-b134-f583d6707381"
+                "azdata_cell_guid": "53521faa-17f0-49f3-92c1-c37602339181"
             }
         },
         {
@@ -287,7 +305,7 @@
                 "azdata_cell_guid": "f2a96ef9-d39c-4f16-af2d-d41adb56403e"
             },
             "outputs": [],
-            "execution_count": 27
+            "execution_count": 8
         },
         {
             "cell_type": "markdown",
@@ -310,7 +328,7 @@
                 "azdata_cell_guid": "dd42263b-5296-4ae8-9d69-a2c1cd2b2e1f"
             },
             "outputs": [],
-            "execution_count": 5
+            "execution_count": 10
         },
         {
             "cell_type": "markdown",
@@ -332,7 +350,13 @@
             "metadata": {
                 "azdata_cell_guid": "86e9abb5-8db7-460c-ac20-b730a0db7b40"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "",
+                    "output_type": "stream"
+                }
+            ],
             "execution_count": 9
         },
         {
@@ -353,7 +377,7 @@
                 "azdata_cell_guid": "18ef1258-ace5-481c-b3a7-b6962894d2cc"
             },
             "outputs": [],
-            "execution_count": 25
+            "execution_count": 11
         },
         {
             "cell_type": "markdown",
